# my-dev-knowledge

./: .gitignore  README.md  ____TEMP.txt  __delete.py  _summary.md  coffee-machine-program.py  game-blackjack.py  world-capitals-hangman-game.py
Python/Linter-Formatter-Typechecker/ruff/: _about.txt  installation.txt  pyproject.toml
Python/Web-development/: ai-prompt-context-model.txt  pyproject-file-model.txt  pyproject.toml
Python/Web-development/django/: _about.txt  _running-app.txt  calc-date.txt  django-project-folder-structure.txt  dunder-methods-init.py  dunder-methods-xxxxxxxxxxxx.py  namespaces-where-to-use.txt  slug-slugify-django-english.py  slug-slugify-django-other-languages.py
Python/Web-development/django/0-about-and-basic-modules/: module-ruff.txt  module-uv.txt
Python/Web-development/django/0-new-project/: api.txt  discovery-django.txt  seo-project.txt  update-django-version.txt  web-project-django-only.txt  web-project-django-with-react.txt  web-project-django-with-vue.txt  web-project-wagtail-only.txt
Python/Web-development/django/1-about-and-basic-modules/: module-uv.txt
Python/Web-development/django/1-install-and-first-steps/: 0-django-installation-and-setup.txt  0-installing-the-project.txt  1-install-new-project.txt  1-install-with-pip-package.txt  1-install-with-uv-package.txt  1-reinstall-new-copy.txt  1-with-pip-manager.txt  1-with-uv-manager.txt  2-install-project-with-pip.txt  2-install-project-with-uv.txt  2.1-installed-project-testing.txt  2.2-installed-project-setup.txt  3-re-install-only-django-with-pip.txt  3-re-install-only-django-with-uv.txt  3-re-install-project-with-pip.txt  3-re-install-project-with-uv.txt  environment-variables-django.py  integration-vuejs.txt  project-folder-structure-django-with-vue.txt  project-folder-structure-django.txt  recreate-database.txt  reinstall-database.txt  reinstall-new-django-copy.txt
Python/Web-development/django/10-login-and-logout/: 0-registering-by-frontend.txt  1-registering-custom-form.txt  2-django-password.txt  3-logout-in-django.txt  protecting-access-from-not-logged.txt  using-cms.txt
Python/Web-development/django/11-sessions/: _about.txt
Python/Web-development/django/12-error-pages/: error-types.txt
Python/Web-development/django/13-email/: config-settings.txt
Python/Web-development/django/14-external-frontend-solution/: _integration.txt
Python/Web-development/django/15-deployment/: _about.txt  pull-request.txt  updating-production-env-vars.txt
Python/Web-development/django/16-debug/: 1-implementing.txt  calling-debug.py
Python/Web-development/django/17-testing/: _basic.txt
Python/Web-development/django/2-creating-and-deleting-apps/: creating.txt  deleting.txt  renaming.txt
Python/Web-development/django/3-1-backend-models-database/: _about.txt  _creating_db_table.py  _model-arguments.txt  _models-knowledge.txt  consulting-data-from-other-models.txt  creating-explicit-id.txt  environment-variables-on-django.txt  field-autofill.txt  field-boolean.txt  field-id.txt  field-select-menu-multiple.txt  field-select-menu-single.txt  instance-custom-delete.txt  instance-custom-save.txt  migrating-updating.txt  model-attr-field-auto.txt  model-attr-field-bigAuto.txt  model-attr-field-bigInteger.txt  model-attr-field-binary.txt  model-attr-field-boolean.txt  model-attr-field-char.txt  model-attr-field-date.txt  model-attr-field-dateTime.txt  model-attr-field-decimal.txt  model-attr-field-duration.txt  model-attr-field-email.txt  model-attr-field-file.txt  model-attr-field-float.txt  model-attr-field-image.txt  model-attr-field-integer.txt  model-attr-field-many-to-many.txt  model-attr-field-nullBoolean.txt  model-attr-field-one-to-one.txt  model-attr-field-positiveBigInteger.txt  model-attr-field-positiveInteger.txt  model-attr-field-positiveSmallInteger.txt  model-attr-field-slug.txt  model-attr-field-smallAuto.txt  model-attr-field-smallInteger.txt  model-attr-field-text.txt  (+8 more)
Python/Web-development/django/3-1-models-database/: 1-models-knowledge.txt  2-model-arguments.txt  Inheriting-attributes.txt  Inheriting-common-attributes.txt  (+65 more)
Python/Web-development/fast-api/: about.txt
Python/Web-development/flask/: _about.txt  _running-app.txt  flask-project-folder-structure.txt
(+4714 files in other folders)
