[project.urls]
"Homepage" = "https://xxxxxxxxxxxxxxxxxxx"
"Repository" = "https://github.com/xxxxxxxxxxx/"
"Documentation" = "https://github.com/xxxxxxxxxxxxxxx/README.md"
"Bug Tracker" = "https://not-applied"

[project]
name = "xxxxxxxxxxxxxxxxxx"
version = "0.1.0"  # There is a way to make it dynamic with repository!!!
description = "xxxxxxxxxxxxxxxxxxxxxxxxxxxx"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Aldo Lammel", email = "aldolammel@gmail.com"}
]
maintainers = [
    {name = "Aldo Lammel", email = "aldolammel@gmail.com"}
]
keywords = ["xxxx", "cccccc", "vvvvvvv"]
classifiers = [
    "Development Status :: 4 - Beta"
]
dependencies = []

# [dependency-groups]
# Don't use it 'coz it's not compactible with many tools!
# That said, keep using [project.optional-dependencies].

[project.optional-dependencies]
dev = []
test = []
docs = []

# Python Linter and Formatter:
# Reserved space...